--- a/src/lib/main.css
+++ b/src/lib/main.css
@@ -7,7 +7,6 @@
 }
 
 body {
-
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -16,80 +15,17 @@ body {
   --secondary-color: rgb(235, 232, 232);
   --tertiary-color: rgb(205, 205, 205);
   --accent-color: rgb(58, 150, 48);
-  --destructive-color: rgb(249, 39, 39);
+  --destructive-color: rgb(246, 185, 185);
   --complementary-color: rgb(36, 93, 236);
   --text-color: rgb(26, 31, 37);
 }
 
 .hljs {
-  background: #282c34;
-  color: #abb2bf;
-}
-
-.hljs * {
-  color: #b8bec9;
-}
-
-.hljs-comment,
-.hljs-quote {
-  color: #5c6370;
-  font-style: italic;
-}
-
-.hljs-doctag,
-.hljs-formula,
-.hljs-keyword {
-  color: #c678dd;
-}
-
-.hljs-deletion,
-.hljs-name,
-.hljs-section,
-.hljs-selector-tag,
-.hljs-subst {
-  color: #e06c75;
-}
-
-.hljs-literal {
-  color: #56b6c2;
-}
-
-.hljs-addition,
-.hljs-attribute,
-.hljs-meta .hljs-string,
-.hljs-regexp,
-.hljs-string {
-  color: #98c379;
-}
-
-.hljs-attr,
-.hljs-number,
-.hljs-selector-attr,
-.hljs-selector-class,
-.hljs-selector-pseudo,
-.hljs-template-variable,
-.hljs-type,
-.hljs-variable {
-  color: #d19a66;
-}
-
-.hljs-bullet,
-.hljs-link,
-.hljs-meta,
-.hljs-selector-id,
-.hljs-symbol,
-.hljs-title {
-  color: #61aeee;
-}
-
-.hljs-built_in,
-.hljs-class .hljs-title,
-.hljs-title.class_ {
-  color: #e6c07b;
-}
-
-.hljs-emphasis {
-  font-style: italic;
+  color: #000000;
+  font-family: "Inter", sans-serif; /* Ensure consistent font */
+  font-size: 1rem; /* Set a consistent font size */
+  font-weight: normal; /* Reset any bold styles */
+  font-style: normal; /* Reset any italic styles */
 }
 
 .hljs-strong {
